Add createdBefore and datesChanged filter
